[gd_scene load_steps=3 format=3 uid="uid://c8vgm8l0x7pxo"]

[ext_resource type="Script" path="res://scripts/dialogs/AboutDialog.gd" id="1_k8j4p"]
[ext_resource type="Texture2D" path="res://assets/icon.svg" id="2_m8k4p"]

[node name="AboutDialog" type="AcceptDialog"]
title = "About Lymo"
initial_position = 1
size = Vector2i(400, 300)
script = ExtResource("1_k8j4p")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -49.0

[node name="IconContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="AppIcon" type="TextureRect" parent="VBoxContainer/IconContainer"]
layout_mode = 2
texture = ExtResource("2_m8k4p")
expand_mode = 2
stretch_mode = 4

[node name="InfoContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/InfoContainer"]
layout_mode = 2

[node name="AppName" type="Label" parent="VBoxContainer/InfoContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Lymo"
horizontal_alignment = 1

[node name="AppVersion" type="Label" parent="VBoxContainer/InfoContainer"]
layout_mode = 2
text = "Version 1.0.0"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/InfoContainer"]
layout_mode = 2

[node name="AppDescription" type="Label" parent="VBoxContainer/InfoContainer"]
layout_mode = 2
text = "Professional Video Projection Mapping Tool

Lymo provides intuitive tools for creating immersive projection mapping experiences with precise surface control, video playback, and real-time visualization."
horizontal_alignment = 1
autowrap_mode = 2

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer/InfoContainer"]
layout_mode = 2

[node name="CopyrightLabel" type="Label" parent="VBoxContainer/InfoContainer"]
layout_mode = 2
text = "Â© 2025 Lymo Project
Open Source Video Projection Mapping Tool"
horizontal_alignment = 1